--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -329,7 +329,7 @@
   outline: none;
   cursor: pointer;
   /* padding: 10px; */
-  font-family: sans-serif;
+  font-family: "Segoe UI";
   font-size: 20px;
   /* background-color: #ffffff; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
@@ -346,7 +346,7 @@
   outline: none;
   cursor: pointer;
   /* padding: 10px; */
-  font-family: sans-serif;
+  font-family: "Segoe UI";
   font-size: 20px;
   /* background-color: #ffffff; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
@@ -356,6 +356,7 @@
   float: left;
 	width: 33.333%;
 	text-align: center;
+  color:black;
 }
 
 
@@ -364,6 +365,7 @@
   background-color: #DCDCDC;
 }
 
+/* social calendar css */
 .profile-tabContainer .profile-tabPanel{
   /* height: 85%; */
   /* background-color: gray; */
@@ -372,8 +374,9 @@
   align-items: center;
   align-content: center;
   padding-top: 2%;
-  font-family: sans-serif;
+  font-family: "Segoe UI";
   font-size: 22px;
+
   /* display: none; */
   /* overflow: auto; */
   /* height: 850px; */
