--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -3,10 +3,13 @@
   top: 0px;
   left: 0px;
   right: 0px;
+  /* bottom: 0px; */
+  height: 100vh;
+
   overflow: hidden;
-  height: 100%;
   background: rgba(0, 0, 0, 0.45);
   z-index: 99;
+  /* margin-bottom: 1000px; */
 
 }
 
