--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -1,5 +1,5 @@
 .profilePage{
-  background-color: white;
+  background-color: #fafafa;
   position: absolute;
   left:4%;
   width: 1760px;
@@ -285,6 +285,7 @@
 .profile-tabContainer {
   position:absolute;
   top: 450px;
+
   /* left: 40px; */
   bottom: 28px;
   width: 1760px;
@@ -305,6 +306,7 @@
   text-align: center;
   /* margin-top: 10px; */
   /* background-color: red; */
+  color:red;
   padding-top: 20px;
   margin-bottom: 10px;
   /* padding-bottom: 5px; */
@@ -323,7 +325,8 @@
   outline: none;
   cursor: pointer;
   /* padding: 10px; */
-  font-family: sans-serif;
+  font-weight: 500;
+  font-family: "Segoe UI";
   font-size: 20px;
   /* background-color: #ffffff; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
@@ -359,6 +362,7 @@
   /* padding: 10px; */
   font-family: "Segoe UI";
   font-size: 20px;
+
   /* background-color: #ffffff; */
   /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
 }
@@ -401,9 +405,10 @@
   text-align: center;
   align-items: center;
   align-content: center;
-  padding-top: 2%;
+  padding-top: 1.5%;
   font-family: "Segoe UI";
   font-size: 22px;
+  color:red;
 
   /* display: none; */
   /* overflow: auto; */
