--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -10,7 +10,7 @@
 }
 
 .chatContainer .chatLeftSide{
-  background-color: red;
+  background-color: white;
   width: 23%;
   height: 100%;
 }
@@ -24,20 +24,48 @@
 }
 
 .chatContainer .chatLeftSide .newSidePanel{
-  background-color: red;
-  width: 25%;
+  /* background-color: white; */
+  padding: 10px;
+  width: 100%;
   height: 100%;
 }
 
 
 .chatContainer .chatRightSide .newChatContent{
-  background-color: blue;
+  background-color: white;
+  border: 1px solid gray;
   height: 92%;
   position: relative;
 }
+.chatContainer .chatRightSide .newChatContent .bottomBox{
+  position: absolute;
+  bottom: 0px;
+  height: 60px;
+  width: 100%;
+  border: 1px solid grey;
+}
 
 .chatContainer .chatRightSide .newChatHeader{
-  background-color: green;
+  background-color: white;
+  border: 1px solid grey;
   height: 8%;
   position: relative;
+}
+.chatContainer .chatRightSide .newChatHeader .avaHeader{
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.chatContainer .chatRightSide .newChatHeader .nameHeader{
+  font-size: 25px;
+  position: relative;
+  top: 5px;
+  left: 5px;
+
+}
+
+.chatInput{
+  width: 700px;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
 }
