--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -10,6 +10,16 @@
 }
 
 
+.socialCalCellProfilePic{
+  object-fit: cover;
+  width: 300px;
+  height: 300px;
+  margin-top: 100px;
+
+  overflow: none;
+  }
+
+
 .socialCalendar {
   display: block;
   position: relative;
@@ -85,7 +95,7 @@
 } */
 
 .socialCalendar .socialCalBody .row .selected {
-  border: 2px solid blue;
+  border: 1px solid #1890ff;
 }
 
 .socialCalendar .socialCalBody .row .cell:first-child{
