--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -51,7 +51,9 @@
 .socialModalDate{
   /* background-color: red; */
   text-align: center;
-  font-size: 20px;
+  color:black;
+  font-weight: 500;
+  font-size: 18px;
   position:relative;
   top: 5px;
   left: 100px;
