--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -39,15 +39,15 @@
 
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer{
   /* background-color: red; */
-  height: 100%;
+  height: 93%;
 
 }
 
 
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer{
   overflow: auto;
-  height: 93%;
-  background-color: red;
+  height: 100%;
+  /* background-color: red; */
 
 }
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer .chatTextBox{
