websocket for chat list

--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -64,11 +64,12 @@
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer .chatTextBoxRight{
   display: inline-block;
   clear: both;
-  float: right;
+  float:left;
   margin: 15px 15px 5px 15px;
   width: calc(100% - 25px);
   font-size: 0.9em;
   position: relative;
+
   text-align: right;
   /* background-color: blue; */
 }
