--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -21,7 +21,7 @@
 
 .profileInfo{
   /* position: absolute; */
-  margin-top: -10px;
+  margin-top: -50px;
   position: relative;
   height: 100%;
   margin-left: 10px;
@@ -37,8 +37,9 @@
 
 
 .selfProfileButtons{
-  margin-top: 40px;
-  margin-left: -50px;
+  margin-top: -300px;
+  margin-right: 50px;
+  float:right;
   /* left: 50%; */
 }
 
@@ -243,6 +244,7 @@
     font-weight: 400;
     margin-top: 90px;
     margin-left: -100px;
+    color:grey;
 }
 
 .profilePic{
