--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -23,10 +23,47 @@
   height: 100%;
 }
 
+.chatContainer .chatLeftSide .newManageChatHeader{
+  /* background-color: red; */
+  height: 7%;
+  width: 100%;
+  position:relative;
+  display: flex;
+}
+
+.manageChatForm{
+  /* background-color: red; */
+  position:relative;
+  height: 100%;
+  width: 80%;
+  padding-left: 5px;
+}
+
+.manageChatForm .searchInput{
+  position: relative;
+  top: 12px;
+  /* left: 1%; */
+  box-sizing: border-box;
+  width: 100%;
+  height: 70%;
+  border-radius: 25px;
+  background-color: whitesmoke;
+}
+
+.newManageChatHeader .addChatsButton{
+  /* background-color: red; */
+  position:relative;
+  padding-top: 4px;
+  font-size: 2.2vw;
+  color: black;
+  width: 20%;
+  text-align: center;
+}
+
 .chatContainer .chatLeftSide .newSidePanel{
   /* background-color: white; */
   width: 100%;
-  height: 100%;
+  height: 93%;
 }
 
 
