--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -1,5 +1,5 @@
 .profilePage{
-  background-color: #fafafa;
+  background-color: #f5f5f5;
   position: absolute;
   left:4%;
   width: 1760px;
@@ -172,7 +172,7 @@
   display: flex;
   flex-direction: row;
   padding: 0px 20px;
-  top:50px;
+  top:30px;
   width: 400px;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -220,6 +220,7 @@
   display: flex;
    flex-direction: row;
    margin-bottom: 20px;
+   margin-left: -50px;
    /* background-color: red; */
 }
 .profileName {
@@ -227,10 +228,25 @@
   font-size: 25px;
   font-weight: 400;
   color: black;
-  margin-left: -50px;
-  margin-top: 60px;
+  margin-left: -75px;
+  margin-top: 50px;
 
 
+}
+
+
+.profileEventCard{
+  position: relative;
+  overflow: hidden;
+  left:26%;
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  padding:25px;
+
+  font-family: 'Segoe UI Regular';
+
+  /* background-color: gainsboro; */
 }
 
 
@@ -247,7 +263,7 @@
 .profileUserName{
     font-size: 20px;
     font-weight: 400;
-    margin-top: 90px;
+    margin-top: 75px;
     margin-left: -100px;
     color:grey;
 }
@@ -304,10 +320,10 @@
 /* This is for the tab changes */
 /* how far up the tab is */
 .profile-tabContainer {
-  border-top: 2px solid #f0f0f0;
+  border-top: 1px solid #f0f0f0;
   position:absolute;
   top: 400px;
-  padding-top: 25px;
+
 
   /* left: 40px; */
   bottom: 28px;
