--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -1,3 +1,4 @@
+/* These are for the NewChat.js */
 .chatContainer {
   background-color: white;
 
@@ -23,6 +24,39 @@
   height: 100%;
 }
 
+/* This is for the add chats feature */
+.chatContainer .chatRightSide .addNewChatContainer{
+  /* background-color: red; */
+  position:relative;
+  width: 100%;
+  height: 100%;
+}
+.chatContainer .chatRightSide .addNewChatContainer .searchFormBox{
+  background-color: red;
+  height: 8%;
+}
+.chatContainer .chatRightSide .addNewChatContainer .searchChatContent{
+  background-color: blue;
+  height: 85%;
+}
+.chatContainer .chatRightSide .addNewChatContainer .searchChatInput{
+  position: absolute;
+  bottom: 0px;
+  height: 7%;
+  width: 100%;
+  border: 1px solid grey;
+}
+
+.chatContainer .chatRightSide .addNewChatContainer .searchChatInput .searchChatInputBox{
+  position: relative;
+  left: 25%;
+  /* background-color: red; */
+  width: 73%;
+  /* top: 10px; */
+}
+
+
+/* This is for chat newManageChatHeader.js */
 .chatContainer .chatLeftSide .newManageChatHeader{
   /* background-color: red; */
   height: 7%;
@@ -30,7 +64,40 @@
   position:relative;
   display: flex;
 }
+.createChatButtonContainer{
+  /* background-color: red; */
+  text-align: center;
+}
+.manageChatForm{
+  /* background-color: red; */
+  position:relative;
+  height: 100%;
+  width: 80%;
+  padding-left: 5px;
+}
+.manageChatForm .searchInput{
+  position: relative;
+  top: 12px;
+  /* left: 1%; */
+  box-sizing: border-box;
+  width: 100%;
+  height: 70%;
+  border-radius: 25px;
+  background-color: whitesmoke;
+}
+.newManageChatHeader .addChatsButton{
+  /* background-color: red; */
+  position:relative;
+  padding-top: 4px;
+  font-size: 2.2vw;
+  color: black;
+  width: 20%;
+  text-align: center;
+}
 
+
+
+/* This is for the nochatscreen.js */
 .chatContainer .chatRightSide .noChatsScreen{
   /* background-color: red; */
   position: relative;
@@ -44,39 +111,6 @@
   font-size: 2vw;
   text-align: center;
 }
-.createChatButtonContainer{
-  /* background-color: red; */
-  text-align: center;
-}
-
-.manageChatForm{
-  /* background-color: red; */
-  position:relative;
-  height: 100%;
-  width: 80%;
-  padding-left: 5px;
-}
-
-.manageChatForm .searchInput{
-  position: relative;
-  top: 12px;
-  /* left: 1%; */
-  box-sizing: border-box;
-  width: 100%;
-  height: 70%;
-  border-radius: 25px;
-  background-color: whitesmoke;
-}
-
-.newManageChatHeader .addChatsButton{
-  /* background-color: red; */
-  position:relative;
-  padding-top: 4px;
-  font-size: 2.2vw;
-  color: black;
-  width: 20%;
-  text-align: center;
-}
 
 .chatContainer .chatLeftSide .newSidePanel{
   /* background-color: white; */
@@ -85,25 +119,22 @@
 }
 
 
+/* This is for the chat content page */
 .chatContainer .chatRightSide .newChatContent{
   background-color: white;
   border: 1px solid gray;
   height: 92%;
   position: relative;
 }
-
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer{
   /* background-color: red; */
   height: 93%;
 
 }
-
-
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer{
   overflow: auto;
   height: 100%;
   /* background-color: red; */
-
 }
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer .chatTextBox{
   display: inline-block;
@@ -115,6 +146,7 @@
   position: relative;
   /* background-color: blue; */
 }
+
 /* This will be for the current user side */
 .chatContainer .chatRightSide .newChatContent .chatWrapContainer .newChatTextContainer .chatTextBoxRight{
   display: inline-block;
@@ -128,8 +160,6 @@
   text-align: right;
   /* background-color: blue; */
 }
-
-
 .chatNameTime {
   display: flex;
   position:absolute;
@@ -153,8 +183,6 @@
   position: relative;
   bottom: 6px;
 }
-
-
 .chatContentText{
   position: relative;
   width: 50%;
@@ -171,12 +199,10 @@
   font-size: 18px;
   /* background-color: blue; */
 }
-
-
 .chatContainer .chatRightSide .newChatContent .bottomBox{
   position: absolute;
   bottom: 0px;
-  height: 60px;
+  height: 7.5%;
   width: 100%;
   border: 1px solid grey;
 }
@@ -198,6 +224,8 @@
 
 }
 
+
+/* This is for the chat header */
 .chatContainer .chatRightSide .newChatHeader{
   background-color: white;
   border: 1px solid grey;
@@ -216,11 +244,12 @@
 
 }
 
+
 .chatInput{
   position: relative;
   width: 100%;
   box-sizing: border-box;
-
+  margin-top: 10px;
   height: 40px;
   border-radius: 25px;
   background-color: whitesmoke;
