--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -24,7 +24,7 @@
   display: block;
   position: relative;
   width: 100%;
-
+  margin-top: -20px;
   /* background-color: red; */
   background: var(--neutral-color);
   /* border: 1px solid var(--border-color); */
@@ -32,7 +32,8 @@
 .socialCalendar .header {
   font-weight: 500;
   font-size: 15px;
-  padding: 1.5em 0;
+  padding: 1em 0;
+  color:black;
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
   width: 100%;
