trying to fix modal height

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -9,6 +9,11 @@
   display: flex;
 }
 
+.socialParent{
+  height:10px;
+
+}
+
 
 .socialCalCellProfilePic{
   object-fit: cover;
@@ -18,6 +23,7 @@
 
   overflow: none;
   }
+
 
 
 .socialCalendar {
