temporary fix for 74vh chats kidn of messed up right now

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -10,9 +10,13 @@
 }
 
 .socialParent{
-  height:10px;
+  /* height:74vh; */
 
 }
+
+/* .socialParent aside main{
+  height:10vh;
+} */
 
 
 .socialCalCellProfilePic{
