--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -24,6 +24,7 @@
   height: 100%;
 }
 
+
 /* This is for the add chats feature */
 .chatContainer .chatRightSide .addNewChatContainer{
   /* background-color: red; */
@@ -181,9 +182,13 @@
 /* This is for the CurChatManager */
 .chatContainer .chatFarRightSide{
     /* background-color: red; */
-    width: 27%;
+    width: 25%;
 }
+.chatContainer .chatFarRightSide .chatManagerContainer{
+  /* background-color: red; */
+  text-align: center;
 
+}
 
 
 /* This is for the chat content page */
@@ -340,7 +345,7 @@
 .chatItem .chatWrap .chatGroupAva{
   position: relative;
   margin-top: 10px;
-  /* background-color: red; */
+/* background-color: red; */
   overflow: hidden;
   width: 50px;
   height: 50px;
