--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -1,6 +1,8 @@
 /* CSS for the whole container */
 
 .innerContainerEvent{
+  font-family: "Segoe UI";
+  font-weight: 400;
   position: relative;
   vertical-align: middle;
   top: 50%;
@@ -49,7 +51,7 @@
   padding:25px;
   box-shadow:
 
-  0 10px 50px rgba(0, 0, 0, 0.05);
+  0 10px 50px rgba(0, 0, 0, 0.08);
   font-family: 'Segoe UI Regular';
 
   /* background-color: gainsboro; */
@@ -75,7 +77,7 @@
   border-radius: 15px;
   box-shadow:
 
-  0 10px 50px rgba(0, 0, 0, 0.12);
+  0 10px 50px rgba(0, 0, 0, 0.08);
   font-family: 'Segoe UI Regular';
 
   /* background-color: gainsboro; */
@@ -171,10 +173,10 @@
 /* CSS for the eventInfo side of the event page */
 .eventInfoContainer{
 
-  width: 80%;
+  width: 70%;
   height: 100%;
   overflow: auto;
-  background: white;
+  /* background: red; */
   /* align-items: center; */
 }
 
@@ -183,6 +185,7 @@
   /* background-color: red; */
   /* width: 70%; */
   height: 70%;
+  margin-left: -200px;
   /* position: relative;
   left: 50%;
   transform: translateX(-50%); */
@@ -190,6 +193,7 @@
 
 .eventInfoContainer .eventInfoView .topSectContainier{
   /* background-color: red; */
+  padding:50px;
   display: flex;
 }
 
@@ -199,7 +203,7 @@
 
   width: 45%;
   height: 375px;
-  padding: 30px;
+  padding: 50px;
   background-color: #F5F5F5;
 }
 
@@ -245,7 +249,7 @@
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
   /* background-color: red; */
-  width: 45%;
+  width: 65%;
   height: 375px;
   border: 10px dashed gainsboro;
   text-align: center;
@@ -263,7 +267,7 @@
   overflow: hidden;
   /* border: 10px dashed gainsboro; */
   text-align: center;
-  margin-left: 200px;
+  margin-left:225px;
   border-radius: 15px;
 }
 
@@ -371,9 +375,9 @@
 
   text-align: center;
   position:absolute;
-  font-size: 30px;
+  font-size: 25px;
   top: 25px;
-  left: 125px;
+  left: 1170px;
   cursor: pointer;
   transition: 0.5s;
 }
@@ -391,8 +395,8 @@
   text-align: center;
   position:absolute;
   font-size: 30px;
-  top: 20px;
-  left: 1150px;
+  top: 90px;
+  left: 1180px;
   cursor: pointer;
   transition: 0.5s;
 }
