--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -1,4 +1,19 @@
 /* CSS for the whole container */
+.eventPageContainer{
+  background-color: white;
+  display: flex;
+  width: 1865px;
+  /* padding: 30px; */
+
+  height: 93%;
+  position: absolute;
+  left: 50%;
+  bottom: 5px;
+  transform: translateX(-48%);
+  font-family: 'Segoe UI Regular';
+}
+
+
 
 .innerContainerEvent{
   font-family: "Segoe UI";
@@ -134,18 +149,6 @@
 
 
 
-.eventPageContainer{
-  background-color: white;
-  display: flex;
-  width: 1765px;
-  /* padding: 30px; */
-  height: 93%;
-  position: absolute;
-  left: 50%;
-  bottom: 5px;
-  transform: translateX(-48%);
-  font-family: 'Segoe UI Regular';
-}
 
 .dateCircle{
   /* border: 1px solid; */
@@ -173,27 +176,30 @@
 /* CSS for the eventInfo side of the event page */
 .eventInfoContainer{
 
-  width: 70%;
+  width: 67%;
   height: 100%;
   overflow: auto;
-  /* background: red; */
+  /* background: green; */
+  margin-left: -25px;
   /* align-items: center; */
 }
 
 /* adjust height of scrollable */
 .eventInfoContainer .eventInfoView{
-  /* background-color: red; */
+
   /* width: 70%; */
-  height: 70%;
+  height: 65%;
   margin-left: -200px;
   /* position: relative;
   left: 50%;
   transform: translateX(-50%); */
 }
-
+/* image padding */
 .eventInfoContainer .eventInfoView .topSectContainier{
-  /* background-color: red; */
-  padding:50px;
+  background-color: #f5f5f5;
+  padding-left: 20px;
+  padding-top: 30px;
+  padding-bottom: 10px;
   display: flex;
 }
 
@@ -201,10 +207,9 @@
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
 
-  width: 45%;
-  height: 375px;
+
   padding: 50px;
-  background-color: #F5F5F5;
+  /* background-color: red; */
 }
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTitle{
@@ -267,18 +272,18 @@
   overflow: hidden;
   /* border: 10px dashed gainsboro; */
   text-align: center;
-  margin-left:225px;
-  border-radius: 15px;
+  margin-left:275px;
+
 }
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic img{
   /* background-color: red; */
 
   object-fit: cover;
-  width: 500px;
-  height: 375px;
+  width: 450px;
+  height: 350px;
   background-color: #F5F5F5;
-
+  border-radius: 20px;
 }
 
 
@@ -389,6 +394,22 @@
   width:100%;
 }
 
+
+/* times */
+
+.editEventBackButtonContainer{
+  /* background-color: red; */
+  border: 1px solid gainsboro;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 0px;
+
+  text-align: center;
+  padding-top: 3px;
+}
+
+/* pencil */
 .editEventButtonContainer{
   /* background-color: red; */
   color:#1890ff;
@@ -400,24 +421,15 @@
   cursor: pointer;
   transition: 0.5s;
 }
+
+
+
 .editEventButtonContainer:hover{
   background-color: whitesmoke;
 }
 
 
 
-
-.editEventBackButtonContainer{
-  /* background-color: red; */
-  border: 1px solid gainsboro;
-  height: 50px;
-  width: 50px;
-  position: absolute;
-  top: 0px;
-  font-size: 30px;
-  text-align: center;
-  padding-top: 3px;
-}
 
 
 .chatBox{
