--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -63,10 +63,10 @@
   background: white;
   line-height: 150%;
   border-radius: 15px;
-  padding:25px;
+  padding:50px;
   box-shadow:
 
-  0 10px 50px rgba(0, 0, 0, 0.08);
+  0 10px 50px rgba(0, 0, 0, 0.13);
   font-family: 'Segoe UI Regular';
 
   /* background-color: gainsboro; */
@@ -255,10 +255,10 @@
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
   /* background-color: red; */
   width: 65%;
-  height: 375px;
+  height: 350px;
   border: 10px dashed gainsboro;
   text-align: center;
-  margin-left: 200px;
+  margin-left: 300px;
   border-radius: 10px;
 }
 
@@ -271,8 +271,7 @@
 
   overflow: hidden;
   /* border: 10px dashed gainsboro; */
-  text-align: center;
-  margin-left:275px;
+  margin-left: 300px;
 
 }
 
@@ -295,6 +294,7 @@
   top: 28%;
   font-size: 55px;
   color: gainsboro;
+
 }
 
 .noMap{
@@ -471,7 +471,7 @@
 
 .messageList{
   width: 100%;
-  height: 85%;
+  height: 82%;
   /* background-color: red; */
   overflow: auto;
   margin-top: 20px;
@@ -554,17 +554,17 @@
 }
 
 .eventChatInput {
-  /* background-color: gainsboro; */
-  margin-top:25px;
-  border-radius: 5px;
+  background-color: #f5f5f5;
+  margin-top:10px;
+  border-radius: 10px;
   margin-left: 15px;
   width:95%;
   font-size: 15px;
-
+  padding:10px;
 }
 
 .roundButton{
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .selectBox{
