--- a/frontend/src/containers/CurrUser/EditProfile.css
+++ b/frontend/src/containers/CurrUser/EditProfile.css
@@ -16,8 +16,16 @@
   object-fit: cover;
   width: 300px;
   height: 300px;
+  margin-top:60px;
   overflow: none;
   border-radius: 10px;
+  box-shadow:
+
+  0 10px 50px rgba(0, 0, 0, 0.08);
+  }
+
+  .changeAvatar{
+    
   }
 
   .fitPhoto{
@@ -27,8 +35,9 @@
   }
 
 .sideContainer{
-  padding-top: 10px;
-  width:750px;
+  padding: 20px;
+
+
   /* background-color: red; */
 }
 
@@ -54,7 +63,7 @@
 .side2{
   display: inline-block;
   float:right;
-  margin-top: 75px;
+  margin-top: 60px;
   margin-right: 50px;
   /* background-color: green; */
 }
@@ -62,7 +71,7 @@
 .uploadBox{
 
   width:300px;
-  height:185px;
+  height:155px;
 }
 
 
