--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -143,10 +143,11 @@ main {
 /* Container that holds Calendar */
 .calendarContainer{
   position: absolute;
-  left: 4%;
+  left: 3%;
   width: 100%;
-  height: 94%;
-  bottom: 0px;
+  height: 91vh;
+  top:22%;
+  /* bottom: 0px; */
   background-color: white;
   display: flex;
 }
