--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -64,9 +64,7 @@
   line-height: 150%;
   border-radius: 15px;
   padding:40px;
-  box-shadow:
-
-  0 10px 50px rgba(0, 0, 0, 0.13);
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.13);
   font-family: 'Segoe UI Regular';
 
   /* background-color: gainsboro; */
