--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -80,7 +80,7 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 3;
-  left: 2%;
+  left: 0%;
   font-size: 45px;
 }
 .socialLeftRight .socialArrowRight {
@@ -494,8 +494,55 @@
   /* background-color: #000000cc; */
   overflow: hidden;
   height: 920px;
+}
 
+.clipPicBackground {
+  overflow: hidden;
+  height: 920px;
+  /* border: 1px solid black; */
+  /* background-color: black; */
+  position: relative;
+}
 
+.clipPicBackground .backgroundPic {
+  position: absolute;
+  /* height: %; */
+  width: 100%;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  filter: blur(20px);
+  -webkit-filter: blur(20px);
+  z-index: 0;
+}
+
+.clipPicBackground .clipPicturesRoll{
+  /* display: none; */
+  overflow: hidden;
+  height: 920px;
+  width: 85%;
+  /* border: 1px solid black; */
+  background-color: white;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+  /* box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+  /* border-radius: 10px; */
+  z-index: 10;
+}
+
+.clipPicBackground .clipPicturesRoll .ownerHolder{
+  /* background-color: red; */
+  position: absolute;
+  left: 7.5%;
+  top: 5%;
+  display: flex;
+}
+.clipPicBackground .clipPicturesRoll .ownerHolder .ownerName{
+  position: relative;
+  left: 10%;
 }
 
 .picturesRoll .socialImages{
@@ -504,6 +551,26 @@
   left: 50%;
   transform: translateX(-50%)
   /* top: 50%; */
+}
+
+.clipPicBackground .clipPicturesRoll .polaroidHolder{
+  position: relative;
+  object-fit: cover;
+
+  left: 50%;
+  top: 15%;
+  transform: translateX(-50%);
+  /* border: 1px solid gray; */
+  height: 80%;
+  overflow: hidden;
+  width: 85%;
+
+}
+.clipPicBackground .clipPicturesRoll .polaroidHolder .socialImages{
+  position: relative;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%)
 }
 
 
